--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -24,6 +24,97 @@ linter:
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    avoid_print: true
+    always_use_package_imports: true
+    avoid_dynamic_calls: true
+    avoid_empty_else: true
+    avoid_types_as_parameter_names: true
+    close_sinks: true
+    comment_references: true # Return the larger of [a] or [b]
+    discarded_futures: true
+    empty_statements: true
+    always_put_required_named_parameters_first: true
+    always_specify_types: true
+    annotate_overrides: true
+    avoid_bool_literals_in_conditional_expressions: true
+    avoid_escaping_inner_quotes: true
+    avoid_function_literals_in_foreach_calls: true
+    avoid_js_rounded_ints: true # user BigInt
+    avoid_multiple_declarations_per_line: true
+    avoid_return_types_on_setters: true
+    avoid_returning_null_for_void: true
+    avoid_setters_without_getters: true
+    avoid_returning_this: true
+    avoid_single_cascade_in_expression_statements: true
+    avoid_unnecessary_containers: true
+    avoid_void_async: true
+    await_only_futures: true
+    camel_case_types: true
+    camel_case_extensions: true
+    cascade_invocations: true
+    cast_nullable_to_non_nullable: true
+    constant_identifier_names: true
+    # curly_braces_in_flow_control_structures: true
+    eol_at_end_of_file: true
+    exhaustive_cases: true
+    file_names: true
+    library_prefixes: true
+    no_default_cases: true
+    no_leading_underscores_for_library_prefixes: true
+    no_leading_underscores_for_local_identifiers: true
+    non_constant_identifier_names: true
+    null_closures: true
+    one_member_abstracts: true
+    only_throw_errors: true
+    parameter_assignments: true
+    prefer_adjacent_string_concatenation: true
+    prefer_conditional_assignment: true
+    prefer_const_constructors: true
+    prefer_const_constructors_in_immutables: true
+    prefer_const_declarations: true
+    prefer_contains: true
+    prefer_final_fields: true
+    prefer_final_locals: true
+    prefer_if_elements_to_conditional_expressions: true
+    prefer_if_null_operators: true
+    prefer_initializing_formals: true
+    prefer_interpolation_to_compose_strings: true
+    prefer_is_empty: true
+    prefer_is_not_empty: true
+    prefer_is_not_operator: true
+    prefer_iterable_whereType: true
+    prefer_mixin: true
+    prefer_null_aware_method_calls: true
+    prefer_null_aware_operators: true
+    prefer_spread_collections: true
+    prefer_typing_uninitialized_variables: true
+    recursive_getters: true
+    sized_box_for_whitespace: true
+    sized_box_shrink_expand: true
+    sort_child_properties_last: true
+    sort_constructors_first: true
+    type_annotate_public_apis: true
+    type_init_formals: true
+    unawaited_futures: true
+    unnecessary_await_in_return: true
+    unnecessary_brace_in_string_interps: true
+    unnecessary_const: true
+    unnecessary_constructor_name: true
+    unnecessary_late: true
+    unnecessary_null_aware_assignments: true
+    unnecessary_null_checks: true
+    unnecessary_null_in_if_null_operators: true
+    unnecessary_string_interpolations: true
+    unnecessary_to_list_in_spreads: true
+    use_colored_box: true
+    use_decorated_box: true
+    use_is_even_rather_than_modulo: true
+    always_declare_return_types: true # https://dart.dev/tools/linter-rules#always_declare_return_types
+    prefer_expression_function_bodies: true #https://dart.dev/tools/linter-rules#prefer_expression_function_bodies
+    avoid_web_libraries_in_flutter: true # https://dart.dev/tools/linter-rules#avoid_web_libraries_in_flutter
+    no_logic_in_create_state: true # https://dart.dev/tools/linter-rules#no_logic_in_create_state
+    # always_put_control_body_on_new_line: true # https://dart.dev/tools/linter-rules#always_put_control_body_on_new_line
+    do_not_use_environment: true # https://dart.dev/tools/linter-rules#do_not_use_environment
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
