--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.home.expense.calculator.app.homeexpensecalculator">
    <application
-        android:label="homeexpensecalculator"
+        android:label="Home Expenses Calculator"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
