--- a/.github/workflows/code_check_push.yml
+++ b/.github/workflows/code_check_push.yml
@@ -2,7 +2,7 @@ name: Dart
 
 on:
   push:
-    branches: ["dev_services", "login_registration"]
+    branches: ["dev_services", "login_register"]
 
 jobs:
   code_quality:
