--- a/.github/workflows/code_check_push.yml
+++ b/.github/workflows/code_check_push.yml
@@ -31,7 +31,8 @@ jobs:
         run: flutter pub get
 
       - name: Format code
-        run: dart format --set-exit-if-changed lib
+        run: dart format
+        # --set-exit-if-changed lib
 
       - name: Auto quick-fix on lint errors
         run: dart fix --apply
