--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.0.15
   encrypt: ^5.0.1
   qr_flutter: ^4.1.0
+  cool_dropdown: ^2.1.0
 
 dev_dependencies:
   flutter_test:
